fixed header alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
   width: 1400px;
   left: 50%;
   margin-left: -700px;
+  margin-top: -20px;
   text-align: center;
   position: fixed;
   border-radius: 10px;
